Added Gallery,finished all content related to images and text

--- a/Fishing.html
+++ b/Fishing.html
@@ -10,37 +10,55 @@
 <link rel="stylesheet" href="Assets/css/style.css">
 <link rel="stylesheet" href="Assets/css/dropbox.css">
 <body>
-	<div id="wrapper">
-		<div class="navbar">
-			<a href="Home.html">Home</a>
-			<div class="dropdown">
-				<button class="dropbtn">Catagory
-					<i class="fa fa-caret-down"></i>
-				</button>
-				<div class="dropdown-content">
-					<a href="Hiking.html" >Hiking</a>
-					<a href="Rock_Climbing.html">Rock Climbing</a>
-					<a href="Fishing.html">Fishing</a>
-				 <a href="Camping.html">Camping</a>
-				</div>
-			</div>
-			<a href="Gallery.html">Gallery</a>
-	<h1></h1>
-	<p></p>
-		 <h1></h1>
-     <p></p>
-		 <img src="Assets/image/Fishing.jpg" alt="Mountain" height="450px" width="590px" >
-		 <img src="Assets/image/Fishing2.jpg" height="450px" width="590px" alt="Mountainclimb">
-		 <br>
-		 <h1>Fishing</h1>
-		 <p></p>
-		 <img src="Assets/image/.jpg" alt="guy fishing" height="400px" width="590px">
-		 <img src="Assets/image/" alt="tuna" height="400px" width="590px">
-		 <h1></h1>
-		 <p></p>
-			 <img src="Assets/image/.jpg" alt="Camping site" height="400px" width="590px">
-			 <img src="Assets/image/.jpg" alt="family camping" height="400px" width="590px">
+  <div id="wrapper">
+    <div class="navbar">
+      <a href="Home.html">Home</a>
+      <div class="dropdown">
+        <button class="dropbtn">Catagory
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="Hiking.html" >Hiking</a>
+          <a href="Rock_Climbing.html">Rock Climbing</a>
+          <a href="Fishing.html">Fishing</a>
+         <a href="Camping.html">Camping</a>
+        </div>
+      </div>
+      <a href="Gallery.html">Gallery</a>
+    </div>
+
+  <h1>Fishing in Cape Town</h1>
+  <p>If a heavy tug on your fishing line creates a tug at your heart, recreational fishing,
+     deep sea fishing, saltwater and freshwater fishing in and around Cape Town will certainly stir your fishing passion.</p>
+     <h1>Kommetjie Bay</h1>
+     <p>Recreational Fishing in and around Cape Town has always been a popular past time.
+        Many fishermen’s journeys are more than likely to end up in Cape Town.
+        There are excellent fishing spots in a number of places depending on whether
+        you are looking for Big Game Fishing or something more along the lines of
+        a quiet fly-fishing trip. Cape Town also offers both saltwater and freshwater
+        fishing options, raging sea fishing or quiet rivers, streams and trout fishing in dams.</p>
+     <img src="Assets/image/Fishing1.jpeg" alt="Fishing " height="450px" width="590px" >
+     <img src="Assets/image/Fishing2.jpeg" height="450px" width="590px" alt="Fishing">
+     <br>
+     <h1>Fishing</h1>
+     <p>Fishing in Cape Town with Hooked On Africa is perfect for those who want to charter
+        a private boat or for small groups. This Cape Town based fishing charter operates out
+        of the popular Snoek fishing village, Hout Bay Harbour, Cape Town in South Africa.
+        Hooked On Africa Fishing Charters, the leading Big Game Fishing Charter Company is
+        located in one of the richest fishing grounds left in the world today. With a large
+         selection of boats to charter, an array of different fishing equipment & tackle,
+          we are the ultimate Fishing Charter Company in Cape Town</p>
+     <img src="Assets/image/Fishing3.jpg" alt="FishingFishing" height="400px" width="590px">
+     <img src="Assets/image/Fishing4.jpg" alt="Fishing" height="400px" width="590px">
+     <h1>Simon's Town pier</h1>
+     <p>The Cape waters offer some of the richest fishing grounds in the world and
+        BIG BLUE SPORT FISHING CHARTERS is privileged to be located in these premium
+        fishing grounds, with quick and easy access to the tuna grounds and Cape Point,
+         famous for yellowtail fishing.</p>
+       <img src="Assets/image/Fishing5.jpg" alt="Fishing" height="400px" width="590px">
+       <img src="Assets/image/Fishing6.jpg" alt="Fishing" height="400px" width="590px">
      <footer>Website designed by Rustin Cassiem</footer>
-	</div>
+
+  </div>
 </body>
 </html>
