--- a/Gallery.html
+++ b/Gallery.html
@@ -4,9 +4,54 @@
     <meta charset="utf-8">
     <title></title>
   </head>
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="HandheldFriendly" content="true">
+  <link rel="stylesheet" href="Assets/css/style.css">
+  <link rel="stylesheet" href="Assets/css/dropbox.css">
   <body>
+    <div id="wrapper">
+      <div class="navbar">
+        <a href="Home.html">Home</a>
+        <div class="dropdown">
+          <button class="dropbtn">Catagory
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="Hiking.html" >Hiking</a>
+            <a href="Rock_Climbing.html">Rock Climbing</a>
+            <a href="Fishing.html">Fishing</a>
+           <a href="Camping.html">Camping</a>
+          </div>
+        </div>
+        <a href="Gallery.html">Gallery</a>
+      </div>
+      <h1>Camping</h1>
+      <img src="Assets/image/Gallery/Camping2.jpg"  height="450px" width="590px" alt="Camping">
+      <img src="Assets/image/Gallery/Camping3.jpg"  height="450px" width="590px" alt="Camping">
+      <img src="Assets/image/Gallery/Camping4.jpg"  height="450px" width="590px" alt="Camping">
+      <img src="Assets/image/Gallery/Camping5.jpg"  height="450px" width="590px" alt="Camping">
+      <br>
+      <h2>Fishing</h2>
+      <img src="Assets/image/Gallery/Fishing1.jpg"  height="450px" width="590px" alt="Fishing">
+      <img src="Assets/image/Gallery/Fishing2.jpg"  height="450px" width="590px" alt="Fishing">
+      <img src="Assets/image/Gallery/Fishing3.jpg"  height="450px" width="590px" alt="Fishing">
+      <img src="Assets/image/Gallery/Fishing4.jpg"  height="450px" width="590px" alt="Fishing">
+      <br>
+      <h2>Rock Climbing</h2>
+      <img src="Assets/image/Gallery/Rock1.jpg"  height="450px" width="590px" alt="Rock Climbing">
+      <img src="Assets/image/Gallery/Rock2.jpg"  height="450px" width="590px" alt="Rock Climbing">
+      <img src="Assets/image/Gallery/Rock3.jpg"  height="450px" width="590px" alt="Rock Climbing">
+      <img src="Assets/image/Gallery/Rock4.jpg"  height="450px" width="590px" alt="Rock Climbing">
+      <br>
+      <h2>Hiking</h2>
+      <img src="https://imagesvc.timeincapp.com/v3/mm/image?url=http%3A%2F%2Fcdn-image.travelandleisure.com%2Fsites%2Fdefault%2Ffiles%2Fstyles%2F1600x1000%2Fpublic%2Flocal-experts-cape-town-best-hiking-trails.jpg%3Fitok%3DvEYerBOn&w=700&q=85"  height="450px" width="590px" alt="Hiking">
+      <img src="Assets/image/Gallery/Hiking2.jpg"  height="450px" width="590px" alt="Hiking">
+      <img src="Assets/image/Gallery/Hiking3.jpg"  height="450px" width="590px" alt="Hiking">
+      <img src="Assets/image/Gallery/Hiking4.jpg"  height="450px" width="590px" alt="Hiking">
 
 
     <footer>Website designed by Rustin Cassiem</footer>
+  </div>
   </body>
 </html>
