just finishing contact form

--- a/Camping.html
+++ b/Camping.html
@@ -22,6 +22,7 @@
 					</div>
 				</div>
 				<a href="Gallery.html">Gallery</a>
+				<a href="contact.html">ContactUS</a>
 				</div>
         <h1>Camping Areas</h1>
          <h2>Wolfkop camping village</h2>
