--- a/Fishing.html
+++ b/Fishing.html
@@ -25,6 +25,7 @@
         </div>
       </div>
       <a href="Gallery.html">Gallery</a>
+			<a href="contact.html">ContactUS</a>
     </div>
 
   <h1>Fishing in Cape Town</h1>
