--- a/Rock_Climbing.html
+++ b/Rock_Climbing.html
@@ -25,6 +25,7 @@
   				</div>
   			</div>
   			<a href="Gallery.html">Gallery</a>
+        <a href="contact.html">ContactUS</a>
   		</div>
     <h1>Rock Climbing</h1>
      <h2>Hangout gym</h2>
