--- a/Contact.html
+++ b/Contact.html
@@ -5,9 +5,29 @@
 	<title>Form </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="Assets/css/contact.css">
+	<link rel="stylesheet" href="Assets/css/style.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
+	<div id="wrapper">
+		<div class="navbar">
+			<a href="Home.html">Home</a>
+			<div class="dropdown">
+				<button class="dropbtn">Catagory
+					<i class="fa fa-caret-down"></i>
+				</button>
+				<div class="dropdown-content">
+					<a href="Hiking.html" >Hiking</a>
+					<a href="Rock_Climbing.html">Rock Climbing</a>
+					<a href="Fishing.html">Fishing</a>
+				 <a href="Camping.html">Camping</a>
+				</div>
+			</div>
+			<a href="Gallery.html">Gallery</a>
+			<a href="contact.html">ContactUS</a>
+
+
+		</div>
 	<form class="myForm">
 		<label for="customer_name">Name </label>
 		<input type="text" name="customer_name" id="customer_name" required>
@@ -33,5 +53,6 @@
 					<button>Submit</button>
 
 	 </form>
+ </div>
 	</body>
 </html>
