--- a/Gallery.html
+++ b/Gallery.html
@@ -2,14 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Gallery page</title>
   </head>
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
   <link rel="stylesheet" href="Assets/css/style.css">
   <link rel="stylesheet" href="Assets/css/dropbox.css">
+  <link rel="stylesheet" href="Assets/css/Grid.css">
+  <script src="Assets/js/script.js" type="text/javascript"></script>
   <body>
+
+
     <div id="wrapper">
       <div class="navbar">
         <a href="Home.html">Home</a>
@@ -25,32 +29,42 @@
           </div>
         </div>
         <a href="Gallery.html">Gallery</a>
+        <a href="contact.html">ContactUS</a>
       </div>
+      <section>
+
       <h1>Camping</h1>
-      <img src="Assets/image/Gallery/Camping2.jpg"  height="450px" width="590px" alt="Camping">
-      <img src="Assets/image/Gallery/Camping3.jpg"  height="450px" width="590px" alt="Camping">
-      <img src="Assets/image/Gallery/Camping4.jpg"  height="450px" width="590px" alt="Camping">
-      <img src="Assets/image/Gallery/Camping5.jpg"  height="450px" width="590px" alt="Camping">
-      <br>
+      <div class="grid_main">
+        <img src="Assets/image/Gallery/Camping2.jpg" height="450px" width="590px" alt="Camping">
+        <img src="Assets/image/Gallery/Camping3.jpg" height="450px" width="590px"  alt="Camping">
+        <img src="Assets/image/Gallery/Camping4.jpg" height="450px" width="590px"  alt="Camping">
+        <img src="Assets/image/Gallery/Camping5.jpg" height="450px" width="590px" alt="Camping">
+      </div>
+
       <h2>Fishing</h2>
+      <div class="grid_main">
       <img src="Assets/image/Gallery/Fishing1.jpg"  height="450px" width="590px" alt="Fishing">
       <img src="Assets/image/Gallery/Fishing2.jpg"  height="450px" width="590px" alt="Fishing">
       <img src="Assets/image/Gallery/Fishing3.jpg"  height="450px" width="590px" alt="Fishing">
       <img src="Assets/image/Gallery/Fishing4.jpg"  height="450px" width="590px" alt="Fishing">
-      <br>
+    </div>
+
       <h2>Rock Climbing</h2>
+      <div class="grid_main">
       <img src="Assets/image/Gallery/Rock1.jpg"  height="450px" width="590px" alt="Rock Climbing">
       <img src="Assets/image/Gallery/Rock2.jpg"  height="450px" width="590px" alt="Rock Climbing">
       <img src="Assets/image/Gallery/Rock3.jpg"  height="450px" width="590px" alt="Rock Climbing">
       <img src="Assets/image/Gallery/Rock4.jpg"  height="450px" width="590px" alt="Rock Climbing">
-      <br>
+      </div>
+
       <h2>Hiking</h2>
+      <div class="grid_main">
       <img src="https://imagesvc.timeincapp.com/v3/mm/image?url=http%3A%2F%2Fcdn-image.travelandleisure.com%2Fsites%2Fdefault%2Ffiles%2Fstyles%2F1600x1000%2Fpublic%2Flocal-experts-cape-town-best-hiking-trails.jpg%3Fitok%3DvEYerBOn&w=700&q=85"  height="450px" width="590px" alt="Hiking">
       <img src="Assets/image/Gallery/Hiking2.jpg"  height="450px" width="590px" alt="Hiking">
       <img src="Assets/image/Gallery/Hiking3.jpg"  height="450px" width="590px" alt="Hiking">
       <img src="Assets/image/Gallery/Hiking4.jpg"  height="450px" width="590px" alt="Hiking">
-
-
+     </div>
+     </section>
     <footer>Website designed by Rustin Cassiem</footer>
   </div>
   </body>
