--- a/Home.html
+++ b/Home.html
@@ -25,6 +25,8 @@
 				</div>
 			</div>
 			<a href="Gallery.html">Gallery</a>
+			<a href="contact.html">ContactUS</a>
+
 
 		</div>
 	<h1>Outdoor Adventure</h1>
