some images wont show

--- a/Hiking.html
+++ b/Hiking.html
@@ -32,7 +32,7 @@
 			On a clear day the views from atop Lions Head are spectacular and great for taking photographs of the Cape Peninsula
 			and Robben Island. It is a spectacular walk to the top and although it can be quite steep at times, the stunning views
 			of Cape Town on the way up will keep you motivated to reach the top</p>
-			<img src="Assets/image/Lions_Head2.jpg" alt="Distance view of Lions Head" width="99.5%" height="320px">
+			<img src="Assets/image/Lions_Head2.jpg" alt="Distance view of Lions Head" width="400px" height="320px">
 			<img src="Assets/image/Lions_Head1.jpg" alt="Close up of Lions Head" height="400px" width="590px" >
 			<img src="Assets/image/Lions_Head3.jpg" alt="Close up of Lions Head" height="400px" width="590px" >
 			<br>
