--- a/Rock_Climbing.html
+++ b/Rock_Climbing.html
@@ -36,7 +36,7 @@
            an intermediate climber wanting to improve your grades and technique,
            or an experienced climber needing somewhere to get in some focused
            training, you’ve come to the right place!</p>
-       <img src="Assets/image/Rock1.jpg"  height="400px" width="590px" alt="indoor climmbing">
+       <img src="Assets/image/Rock1.jpg"  height="400px" width="590px" alt="indoor climbing">
        <img src="Assets/image/Rock2.jpg" height="400px" width="590px" alt="indoor climbing ">
        <br>
        <h2>Cape Town Rocks</h2>
