--- a/Rock_Climbing.html
+++ b/Rock_Climbing.html
@@ -25,7 +25,7 @@
   				</div>
   			</div>
   			<a href="Gallery.html">Gallery</a>
-        <a href="contact.html">ContactUS</a>
+        <a href="Contact.html">ContactUS</a>
   		</div>
     <h1>Rock Climbing</h1>
      <h2>Hangout gym</h2>
@@ -36,7 +36,7 @@
            an intermediate climber wanting to improve your grades and technique,
            or an experienced climber needing somewhere to get in some focused
            training, you’ve come to the right place!</p>
-       <img src="Assets/image/Rock1.jpg"  height="400px" width="590px" alt="indoor climbing">
+       <img src="Assets/image/rock1.jpg"  height="400px" width="590px" alt="indoor climbing">
        <img src="Assets/image/Rock2.jpg" height="400px" width="590px" alt="indoor climbing ">
        <br>
        <h2>Cape Town Rocks</h2>
