--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <a href="Gallery.html">Gallery</a>
-      <a href="contact.html">ContactUS</a>
+      <a href="Contact.html">ContactUS</a>
     </div>
     <h1>Contact Form</h1>
 
