--- a/Gallery.html
+++ b/Gallery.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <a href="Gallery.html">Gallery</a>
-      <a href="contact.html">ContactUS</a>
+      <a href="Contact.html">ContactUS</a>
     </div>
     <section>
 
