--- a/Camping.html
+++ b/Camping.html
@@ -31,7 +31,7 @@
 			the tents are erected on your behalf, saving you the trouble of lugging
 			around heavy camping gear and making for a more comfortable camping adventure
 			that borders on glamping.</p>
-			<img src="Assets/image/Camping1.jpg" alt="Camping site" height="400px" width="590px">
+			<img src="Assets/image/camping1.jpg" alt="Camping site" height="400px" width="590px">
 			<img src="Assets/image/Camping2.jpg" alt="Camping site" height="400px" width="590px">
 			<br>
 			<h2>Slanghoek mountain resort</h2>
@@ -49,7 +49,7 @@
 					guests with a diverse natural landscape, within easy access of civilisation.
 					Its position on the Hoerikwaggo Trail makes it a convenient rest spot for those
 					looking to embark on an overnight hike. </p>
-					<img src="Assets/image/Camping5.jpg" alt="Camping site" height="400px" width="590px">
+					<img src="Assets/image/camping5.jpg" alt="Camping site" height="400px" width="590px">
 					<img src="Assets/image/Camping6.jpg" alt="Camping site" height="400px" width="590px" >
 					<footer>Website designed by Rustin Cassiem</footer>
 				</div>
