--- a/Contact.html
+++ b/Contact.html
@@ -37,7 +37,7 @@
       Mobile No.:<input type="text" name="Address" class="pass-input" placeholder="Needed" required>
       <br>
       <p>
-        <label>Catagory &nbsp &nbsp
+        <label>Categories &nbsp &nbsp
           <select id="" name=""  class="title4" required >
             <option value="" selected="selected" class="title4" disabled="disabled" placeholder="Must Select" required>Select One</option>
             <option value="" >Camping</option>
@@ -49,7 +49,7 @@
       </p>
       <br>
       <p>
-        <label>Enquie &nbsp
+        <label>Enquiies &nbsp
           <textarea name="Optional" maxlength="50000"></textarea>
         </label>
       </p>
