--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
     <div class="navbar">
       <a href="Home.html">Home</a>
       <div class="dropdown">
-        <button class="dropbtn">Catagory
+        <button class="dropbtn">Category
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
@@ -49,7 +49,7 @@
       </p>
       <br>
       <p>
-        <label>Enquiies &nbsp
+        <label>Enquiries &nbsp
           <textarea name="Optional" maxlength="50000"></textarea>
         </label>
       </p>
