--- a/Hiking.html
+++ b/Hiking.html
@@ -22,7 +22,7 @@
 				</div>
 			</div>
 			<a href="Gallery.html">Gallery</a>
-			<a href="Contact.html">ContactUS</a>
+			<a href="Contact.html">Contact Us</a>
 		</div>
 
 		<h1>Hiking spots</h1>
