--- a/Camping.html
+++ b/Camping.html
@@ -22,7 +22,7 @@
 				</div>
 			</div>
 			<a href="Gallery.html">Gallery</a>
-			<a href="Contact.html">ContactUS</a>
+			<a href="Contact.html">Contact Us</a>
 		</div>
 		<h1>Camping Areas</h1>
 		<h2>Wolfkop camping village</h2>
