--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
 	<h1 >Outdoor Adventure</h1>
 	<p>Nowhere in Africa can seriously compete with Cape Town when it comes to outrageous adventure<br>
 		 activities combined with a unique urban and outdoor playground like nowhere on earth.</p>
-		 <h1 href"Hiking.html">Hiking</h1>
+		 <a href="Hiking.html" >Hiking</a>
      <p>Whether you’re after a windswept coastal wander, a mountainous hike with spectacular
 			  views, or a leisurely amble through one of the Cape’s lush nature reserves, here’s our
 				pick of the best hiking trails in and around the city. So, lace up your hiking boots and get cracking.</p>
