--- a/Contact.html
+++ b/Contact.html
@@ -31,10 +31,10 @@
       Name: &nbsp &nbsp &nbsp<input type="text" name="Nmae" class="title" placeholder="Full name" required>
       <br>
       <br>
-      Email: &nbsp &nbsp &nbsp <input type="password" name="Email" class="title1" placeholder="info@gmail.com"required>
+      Email: &nbsp &nbsp &nbsp <input type="Email" name="Email" class="title1" placeholder="info@gmail.com"required>
       <br>
       <br>
-      Mobile No.:<input type="text" name="Address" class="pass-input" placeholder="Needed" required>
+      Mobile No.:<input type="text" name="Phone number" class="pass-input" placeholder="Needed" required>
       <br>
       <p>
         <label>Categories &nbsp &nbsp
