fixed broken images because of not naming images and links the same

--- a/Gallery.html
+++ b/Gallery.html
@@ -32,38 +32,38 @@
       <a href="Contact.html">Contact Us</a>
     </div>
     <section>
-
-      <h1>Camping</h1>
+      <h2>Hiking</h2>
       <div class="grid_main">
-        <img src="Assets/image/Gallery/Camping2.jpg" height="450px" width="590px" alt="Camping">
-        <img src="Assets/image/Gallery/Camping3.jpg" height="450px" width="590px"  alt="Camping">
-        <img src="Assets/image/Gallery/Camping4.jpg" height="450px" width="590px"  alt="Camping">
-        <img src="Assets/image/Gallery/camping5.jpg" height="450px" width="590px" alt="Camping">
-      </div>
-
-      <h2>Fishing</h2>
-      <div class="grid_main">
-        <img src="Assets/image/Gallery/Fishing1.jpg"  height="450px" width="590px" alt="Fishing">
-        <img src="Assets/image/Gallery/Fishing2.jpg"  height="450px" width="590px" alt="Fishing">
-        <img src="Assets/image/Gallery/Fishing3.jpg"  height="450px" width="590px" alt="Fishing">
-        <img src="Assets/image/Gallery/Fishing4.jpg"  height="450px" width="590px" alt="Fishing">
+        <img src="https://imagesvc.timeincapp.com/v3/mm/image?url=http%3A%2F%2Fcdn-image.travelandleisure.com%2Fsites%2Fdefault%2Ffiles%2Fstyles%2F1600x1000%2Fpublic%2Flocal-experts-cape-town-best-hiking-trails.jpg%3Fitok%3DvEYerBOn&w=700&q=85"  height="450px" width="590px" alt="Hiking">
+        <img src="Assets/image/Gallery/Hiking2.jpg"  alt="Hiking">
+        <img src="Assets/image/Gallery/Hiking3.jpg"  alt="Hiking">
+        <img src="Assets/image/Gallery/Hiking4.jpg"  alt="Hiking">
       </div>
 
       <h2>Rock Climbing</h2>
       <div class="grid_main">
-        <img src="Assets/image/Gallery/Rock1.jpg"  height="450px" width="590px" alt="Rock Climbing">
-        <img src="Assets/image/Gallery/Rock2.jpg"  height="450px" width="590px" alt="Rock Climbing">
-        <img src="Assets/image/Gallery/Rock3.jpg"  height="450px" width="590px" alt="Rock Climbing">
-        <img src="Assets/image/Gallery/Rock4.jpg"  height="450px" width="590px" alt="Rock Climbing">
+        <img src="Assets/image/Gallery/Rock1.jpg" alt="Rock Climbing">
+        <img src="Assets/image/Gallery/Rock2.jpg" alt="Rock Climbing">
+        <img src="Assets/image/Gallery/Rock3.jpg" alt="Rock Climbing">
+        <img src="Assets/image/Gallery/Rock4.jpg" alt="Rock Climbing">
       </div>
 
-      <h2>Hiking</h2>
+      <h2>Fishing</h2>
       <div class="grid_main">
-        <img src="https://imagesvc.timeincapp.com/v3/mm/image?url=http%3A%2F%2Fcdn-image.travelandleisure.com%2Fsites%2Fdefault%2Ffiles%2Fstyles%2F1600x1000%2Fpublic%2Flocal-experts-cape-town-best-hiking-trails.jpg%3Fitok%3DvEYerBOn&w=700&q=85"  height="450px" width="590px" alt="Hiking">
-        <img src="Assets/image/Gallery/Hiking2.jpg"  height="450px" width="590px" alt="Hiking">
-        <img src="Assets/image/Gallery/Hiking3.jpg"  height="450px" width="590px" alt="Hiking">
-        <img src="Assets/image/Gallery/Hiking4.jpg"  height="450px" width="590px" alt="Hiking">
+        <img src="Assets/image/Gallery/Fishing1.jpg" alt="Fishing">
+        <img src="Assets/image/Gallery/Fishing2.jpg" alt="Fishing">
+        <img src="Assets/image/Gallery/Fishing3.jpg" alt="Fishing">
+        <img src="Assets/image/Gallery/Fishing4.jpg" alt="Fishing">
       </div>
+
+      <h1>Camping</h1>
+      <div class="grid_main">
+        <img src="Assets/image/Gallery/Camping2.jpg" alt="Camping">
+        <img src="Assets/image/Gallery/Camping3.jpg"  alt="Camping">
+        <img src="Assets/image/Gallery/Camping4.jpg"  alt="Camping">
+        <img src="Assets/image/Gallery/camping5.jpg" alt="Camping">
+      </div>
+
     </section>
     <footer>Website designed by Rustin Cassiem</footer>
   </div>
