--- a/Hiking.html
+++ b/Hiking.html
@@ -32,23 +32,22 @@
 			On a clear day the views from atop Lions Head are spectacular and great for taking photographs of the Cape Peninsula
 			and Robben Island. It is a spectacular walk to the top and although it can be quite steep at times, the stunning views
 			of Cape Town on the way up will keep you motivated to reach the top</p>
-			<img src="Assets/image/Lions_Head2.jpg" alt="Distance view of Lions Head" width="99.5%" height="320px">
-			<img src="Assets/image/Lions_Head1.jpg" alt="Close up of Lions Head" height="400px" width="590px" >
-			<img src="Assets/image/Lions_Head3.jpg" alt="Close up of Lions Head" height="400px" width="590px" >
+			<img src="Assets/image/Lions_Head1.jpg" alt="Close up of Lions Head">
+			<img src="Assets/image/Lions_Head3.jpg" alt="Close up of Lions Head">
 			<br>
 			<h2>Table Mountain</h2>
 			<p>A ride up our famous cable car is possibly one of the very best ways to experience Cape Town,
 				and yet it’s still on the bucket list of many Capetonians, who have yet to experience the thrill.
 				There’s no time like the present to take advantage of the wonderful specials listed below:</p>
-				<img src="Assets/image/tablemountain.jpg" alt="table Mountain"  height="400px" width="590px">
-				<img src="Assets/image/table-mountain-cable-car-2018.jpg" alt="table Mountain"  height="400px" width="590px">
+				<img src="Assets/image/tablemountain.jpg" alt="table Mountain"  >
+				<img src="Assets/image/table-mountain-cable-car-2018.jpg" alt="table Mountain">
 				<br>
 				<h2>Elephant's eye cave in silvermine</h2>
 				<p>The walk up to Elephant’s Eye Cave on the Tokai side of  Silvermine Nature Reserve  is a pleasant,
 					easy going hike that takes about two hours to do from the parking area near the dam in Silvermine
 					Nature Reserve. It is a fun trail to do with young children.</p>
-					<img src="Assets/image/Eeye.jpg" alt="Elephant_Eye"  height="400px" width="590px">
-					<img src="Assets/image/insideEeye.jpg" alt="Elephant_Eye"  height="400px" width="590px">
+					<img src="Assets/image/Eeye.jpg" alt="Elephant_Eye">
+					<img src="Assets/image/insideEeye.jpg" alt="Elephant_Eye">
 					<footer>Website designed by Rustin Cassiem</footer>
 				</div>
 			</body>
