--- a/Fishing.html
+++ b/Fishing.html
@@ -31,17 +31,17 @@
 		<h1>Fishing in Cape Town</h1>
 		<p>If a heavy tug on your fishing line creates a tug at your heart, recreational fishing,
 			deep sea fishing, saltwater and freshwater fishing in and around Cape Town will certainly stir your fishing passion.</p>
-			<h1>Kommetjie Bay</h1>
+			<h2>Kommetjie Bay</h2>
 			<p>Recreational Fishing in and around Cape Town has always been a popular past time.
 				Many fishermen’s journeys are more than likely to end up in Cape Town.
 				There are excellent fishing spots in a number of places depending on whether
 				you are looking for Big Game Fishing or something more along the lines of
 				a quiet fly-fishing trip. Cape Town also offers both saltwater and freshwater
 				fishing options, raging sea fishing or quiet rivers, streams and trout fishing in dams.</p>
-				<img src="Assets/image/Fishing1.jpeg" alt="Fishing " height="450px" width="590px" >
-				<img src="Assets/image/Fishing2.jpeg" height="450px" width="590px" alt="Fishing">
+				<img src="Assets/image/Fishing1.jpeg" alt="Fishing">
+				<img src="Assets/image/Fishing2.jpeg" alt="Fishing">
 				<br>
-				<h1>Fishing</h1>
+				<h2>Fishing</h2>
 				<p>Fishing in Cape Town with Hooked On Africa is perfect for those who want to charter
 					a private boat or for small groups. This Cape Town based fishing charter operates out
 					of the popular Snoek fishing village, Hout Bay Harbour, Cape Town in South Africa.
@@ -49,15 +49,15 @@
 					located in one of the richest fishing grounds left in the world today. With a large
 					selection of boats to charter, an array of different fishing equipment & tackle,
 					we are the ultimate Fishing Charter Company in Cape Town</p>
-					<img src="Assets/image/Fishing3.jpg" alt="FishingFishing" height="400px" width="590px">
-					<img src="Assets/image/Fishing4.jpg" alt="Fishing" height="400px" width="590px">
-					<h1>Simon's Town pier</h1>
+					<img src="Assets/image/Fishing3.jpg" alt="FishingFishing">
+					<img src="Assets/image/Fishing4.jpg" alt="Fishing">
+					<h2>Simon's Town pier</h2>
 					<p>The Cape waters offer some of the richest fishing grounds in the world and
 						BIG BLUE SPORT FISHING CHARTERS is privileged to be located in these premium
 						fishing grounds, with quick and easy access to the tuna grounds and Cape Point,
 						famous for yellowtail fishing.</p>
-						<img src="Assets/image/Fishing5.jpg" alt="Fishing" height="400px" width="590px">
-						<img src="Assets/image/Fishing6.jpg" alt="Fishing" height="400px" width="590px">
+						<img src="Assets/image/Fishing5.jpg" alt="Fishing">
+						<img src="Assets/image/Fishing6.jpg" alt="Fishing">
 						<footer>Website designed by Rustin Cassiem</footer>
 
 					</div>
