--- a/Home.html
+++ b/Home.html
@@ -29,19 +29,19 @@
 
 
 		</div>
-	<h1 >Outdoor Adventure</h1>
-	<p>Nowhere in Africa can seriously compete with Cape Town when it comes to outrageous adventure<br>
+	   <h1 class="Mainhead" >Outdoor Adventure</h1>
+	  <p class="centre">Nowhere in Africa can seriously compete with Cape Town when it comes to outrageous adventure<br>
 		 activities combined with a unique urban and outdoor playground like nowhere on earth.</p>
-		 <h1>Hiking</h1>
+		 <h1><a href="Hiking.html" class"color">Hiking</a></h1>
      <p>Whether you’re after a windswept coastal wander, a mountainous hike with spectacular
 			  views, or a leisurely amble through one of the Cape’s lush nature reserves, here’s our
 				pick of the best hiking trails in and around the city. So, lace up your hiking boots and get cracking.</p>
 				<p><strong>Important note:</strong>Although the Cape is rich in natural beauty, tourists and locals are urged to take
 					 necessary precautions when exploring secluded areas, as crimes and accidents do happen.</p>
-		 <img src="Assets/image/Cape-Town.jpg"  height="400px" width="590px" alt="Mountain">
-		 <img src="Assets/image/Mountainclimb.jpg" height="400px" width="590px" alt="Mountainclimb">
+		 <img src="Assets/image/Cape-Town.jpg"   alt="Mountain">
+		 <img src="Assets/image/Mountainclimb.jpg"  alt="Mountainclimb">
 		 <br>
-				<h1>Rock Climbing</h1>
+				<h1><a href="Rock_Climbing.html">Rock Climbing</a></h1>
 				 <p>The Cape is full of mountains and provides a mecca of climbing. Cape Town being<br>
 					 the main center is a good base to start from. There are a few clubs mainly the MCSA <br>
 					 Cape Town Section which has over 1200 members and a bouldering wall in their club room. <br>
@@ -49,22 +49,22 @@
 					 Good climbing is only a few minutes drive from Cape Town and the furthermost areas about 4-5 hours away.</p>
 
 
-				<img src="Assets/image/Header.jpg"  height="400px" width="590px" alt="Mountain">
-				<img src="Assets/image/Table-mountain-cableway.jpg" height="400px" width="590px" alt="Mountainclimb">
+				<img src="Assets/image/Header.jpg" alt="Mountain">
+				<img src="Assets/image/Table-mountain-cableway.jpg" alt="Mountainclimb">
 				<br>
-		 <h1>Fishing</h1>
+		 <h1><a href="Fishing.html">Fishing</a></h1>
 		 <p> Many fishermen’s journeys are more than likely to end up in Cape Town.  There are excellent<br>
 			  fishing spots in a number of places depending on whether you are looking for Big Game <br>
 				Fishing or something more along the lines of a quiet fly-fishing trip. Cape Town also offers <br>
 				both saltwater and freshwater fishing options, raging sea fishing or quiet rivers, streams and trout fishing in dams.</p>
-		 <img src="Assets/image/Fishing.jpg"  height="400px" width="590px" alt="guy fishing">
-		 <img src="Assets/image/tuna-fishing-cape-town.jpg" alt="tuna" height="400px" width="590px">
-		 <h1>Camping</h1>
+		 <img src="Assets/image/Fishing.jpg" alt="guy fishing">
+		 <img src="Assets/image/tuna-fishing-cape-town.jpg" alt="tuna">
+		 <h1><a href="Camping.html">Camping</a></h1>
 		 <p>Whether you’re looking for back-to-basics beauty, a fun family getaway, or a romantic retreat,
 			 we’ve got you covered with our picks of campsites in the Cape. As always, if we’ve left any of your
 			 favourites out, please let us know in the comments.</p>
-			 <img src="Assets/image/camping.jpg" height="400px" width="590px"  alt="Camping site">
-			 <img src="Assets/image/family.jpg"  height="400px" width="590px" alt="family camping">
+			 <img src="Assets/image/camping.jpg"  alt="Camping site">
+			 <img src="Assets/image/family.jpg"   alt="family camping">
        <footer>Website designed by Rustin Cassiem</footer>
 	</div>
 </body>
