--- a/Gallery.html
+++ b/Gallery.html
@@ -18,7 +18,7 @@
     <div class="navbar">
       <a href="Home.html">Home</a>
       <div class="dropdown">
-        <button class="dropbtn">Catagory
+        <button class="dropbtn">Category
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
