--- a/Gallery.html
+++ b/Gallery.html
@@ -43,7 +43,7 @@
 
       <h1>Camping</h1>
       <div class="">
-        <img src="Gallery/Camping5.jpg" alt="Camping">
+        <img src="Gallery/camping5.jpg" alt="Camping">
         <img src="Gallery/Camping4.jpg"  alt="Camping">
         <img src="Gallery/Camping4.jpg"  alt="Camping">
         <img src="Gallery/camping5.jpg" alt="Camping">
