--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="css/contact.css" type="text/css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/base.css" type="text/css">
+
 </head>
 <body>
   <div id="wrapper">
@@ -13,38 +14,33 @@
       <a href="Gallery.html">Gallery</a>
       <a href="Contact.html">Contact Us</a>
     </div>
-    <h1>Contact Form</h1>
-      <form action="/action_page.php">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-        <label for="Category">Country</label>
-        <select id="Category" name="Category">
+    <form>
+       <h1>Contact Us</h1>
+      <table>
+        <tr><td><label for="Name"><b>Your full name</b></label></td><td><input type="text" placeholder="Sam Winchester" name="First Name" id="check" required></td></tr>
+        <tr><td><label for="Name"><b>Email</b></label></td><td><input type="text" placeholder="sam@mail.com" name="Email" id="check" required></td></tr>
+        <tr><td><label for="Name"><b>cell number</b></label></td><td><input type="text" placeholder="" name="Number" id="check" required></td></tr>
+        <tr><td><label><b>Categories</b></label></td> <td><select id="Category" name=""  required>
+          <option value="" selected="selected" disabled="disabled" placeholder="Must Select" required>Select One</option>
           <option value="" >General</option>
           <option value="" >Camping</option>
           <option value="" >Hiking</option>
           <option value="" >Fishing</option>
           <option value="" >Rock Climbing</option>
-        </select>
+        </select></tr>
+        <tr><td><label><b>Enquiries</b></label></td><td><textarea name="Optional" maxlength="50000" rows="3px" cols="40px"></textarea></td></tr>
+        <tr><td><button type="submit" onclick="myFunction()">Submit</button></td></tr>
 
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Comment" style="height:200px"></textarea>
 
-        <input type="submit" value="Submit">
       </form>
     </div>
 
     </div>
     <script type="text/javascript">
-    var firstName=document.getElementById("firstName").value;
+    var firstName=document.getElementById("fname").value;
     function myFunction(){
       if(true){
-
       }
-
       else{
         alert("Thank you for sumbitting");
       }
