--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
 	<meta charset="utf-8">
-	<title>OutDoor Adventure webpage</title>
+	<title>Outdoor Adventure</title>
 </head>
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -15,7 +15,7 @@
 			<a href="Gallery.html">Gallery</a>
 			<a href="Contact.html">Contact Us</a>
 		</div>
-	   <h1 class="Mainhead h1" >Outdoor Adventure</h1>
+	   <h1 class="Mainhead" >Outdoor Adventure</h1>
 	  <p class="centre">Nowhere in Africa can seriously compete with Cape Town when it comes to outrageous adventure<br>
 		 activities combined with a unique urban and outdoor playground like nowhere on earth.</p>
 		 <h1><a href="Hiking.html"  class="h1" class"color ">Hiking</a></h1>
